
Limitations: HttpUnit does not support JavaScript

Revision History:

 5-Nov-2001

Acknowledgements:
    Thanks to Oliver Imbusch for finding and fixing a problem with parsing of encoded link parameter names and values.
    Thanks to Paul Frantz for finding and fixing a problem with parsing of link parameter names without values.

Problems Fixed:
    1. Links with parameters whose names were encoded were being mis-parsed
    2. Links with empty parameter values were being mis-parsed
    3. All references to TestCase.assert except for one have been renamed to assertTrue in order to prepare for JDK 1.4
       and JUnit 3.7 compatibility. HttpUnitTestCase implements assertTrue to continue support for JUnit 3.6 and earlier.

25-Oct-2001 1.2.7

Acknowledgements:
    Thanks to Chris Stevenson for identifying a problem with forms lacking an action
    Thanks to Drew Varner for more sophisticated cookie handling, including Set-Cookie2 code
    Thanks to David Karr for pointing out the problem with status code 3xx responses and
        suggesting a fix for it.
    Thanks to Dave Glowacki for the default content-type code.
    Thanks to Brett Neumeier for some Javadoc fixes and adding support for the non-standard "Charset" header
    Thanks to Richard Scothern for identiying the cause of problems with POST requests and older servlet engines.
    Thanks to Benoit Xhenseval for adding parameter detection in links, handling of meta and link tags,
        and selection of table cells by ID.
    Thanks to Mike Bracewell for noticing the incorrect loopback address in ServletUnitHttpRequest

Problems corrected:
    1. Forms with no action now default to the originating page
    2. cookies with embedded commas and quotes are now handled
    3. Status code 3xx responses no longer result in a null pointer exception when
       invoking getText or reading the input stream.
    4. The _self target now works for forms.